# Animatory

./: .env.example  .gitignore  2d-animation-agent-pipeline.html  CLAUDE.md  DESIGN.md  IMPROVEMENTS.md  LICENSE  agent-framework.yaml  ptolemy-architecture.html  pyproject.toml  run-backend.ps1  skills-lock.json
.claude/: launch.json
.design-sync/: NOTES.md  config.json  conventions.md
.design-sync/groups/: media.md
.design-sync/previews/: BackLink.tsx  (+14 more)
Animatorymockup/: test.txt
animatory/: __init__.py  base_agent.py  chat_engine.py  chat_store.py  chunker.py  cli.py  entity_enrichment.py  entity_registry.py  item_extractor.py  models.py  pipeline_router.py  prompt_compiler.py  registry.py  run_store.py  scene_parser.py  scene_refiner.py  server.py  visual_inference.py  voice_profiles.py
docs/: imagegen.md  rig-editor-stage.md
fixtures/: animation_context.json  showrunner_context.json
frontend/: .env  .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
mockup/: index.html
scripts/: generate_liwei_showcase.py  generate_with_lora.py  offload_proof.py  reference_demo.py  smoke_businessman.py  train_lora_feasibility.py
tests/: conftest.py  test_api.py  test_base_agent.py  test_chat_engine.py  test_chat_preflight.py  test_chat_store.py  test_chunker.py  test_cli_prompts.py  test_deform_api.py  test_deform_triangulate.py  test_deform_weights.py  test_enrichment_prompts.py  test_entity_bible.py  test_entity_enrichment.py  test_entity_registry.py  test_genvoice.py  test_imagegen.py  test_parse_stream.py  test_pipeline_api.py  test_pipeline_visuals.py  test_prompt_compiler.py  test_registry.py  test_resolve_beats.py  test_run_store_events.py  test_scene_parser.py  test_scene_refiner.py  test_scene_source.py  test_spellcheck_checker.py  test_spellcheck_chunker.py  test_spellcheck_dictionary.py  test_spellcheck_naming.py  test_spellcheck_ws.py  test_studio_api.py  test_studio_store.py  test_visual_inference.py  test_voice_profiles.py  test_zimage_brain.py  test_zimage_executor.py  test_zimage_prompt_injection.py  test_zimage_rig.py  (+2 more)
workflows/: anim_block.json  anim_inbetween.json  anim_lipsync.json  rig_build.json
xuyen-thieu-dinh-quoc-cong/: ep1.docx  ep1.txt  ep2.docx  ep2.txt
(+276 files in other folders)
