[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "animatory-backend"
version = "0.1.0"
description = "Backend MVP for Animatory 2D animation agent pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio[trio]>=4.4.0",
]

[project.scripts]
animatory = "animatory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["animatory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
