[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "animatory-backend"
version = "0.1.0"
description = "Backend MVP for Animatory 2D animation agent pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "anyio[trio]>=4.4.0",
]

[project.scripts]
animatory = "animatory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["animatory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Per-test guard so a genuinely hung test fails fast instead of stalling CI.
# (The interpreter-shutdown hang is fixed at the source in tests/conftest.py.)
timeout = 120
# Coverage is configured here (single source of truth); CI just runs `pytest`.
# `--cov` with no arg uses [tool.coverage.run].source below.
addopts = "--cov --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["animatory"]
branch = true
omit = ["animatory/cli.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
